force-app/main/default/objects/Anomaly_Range_Conf__c/Anomaly_Range_Conf__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Anomaly Range Conf</label>
</CustomObject>