force-app/main/default/objects/Anomaly_Range_Conf__c/fields/Max_Humidity__c.field-meta.xml
<CustomField>
    <fullName>Max_Humidity__c</fullName>
    <label>Max Humidity</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>