force-app/main/default/objects/Anomaly_Range_Conf__c/fields/Max_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Max_Pressure__c</fullName>
    <label>Max Pressure</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>