force-app/main/default/objects/Anomaly_Range_Conf__c/fields/Min_Humidity__c.field-meta.xml
<CustomField>
    <fullName>Min_Humidity__c</fullName>
    <label>Min Humidity</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>